#262: Added CommandSecurityDefinitions to Filter Adjustment Description UCs